@@ -7,6 +7,7 @@ For a detailed view of what has changed, refer to the {uri-repo}/commits/master[
 
 == Unreleased
 
+* allow site-wide AsciiDoc attributes to also be defined on `asciidoc` key in site configuration (#126)
 * set date page variable from revdate for any document in a collection (posts or otherwise) (#202)
 * allow non-ASCII word character to be used in name of attribute reference in config file
 * use File.write instead of IO.write (as IO.write has extra magic we don't need)
